--- a/qform.html
+++ b/qform.html
@@ -25,4 +25,4 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 															
 						
 				</div>
-{% include sidebar %}
+{% include sidebar.html %}
