--- a/qform.html
+++ b/qform.html
@@ -24,5 +24,5 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 })(document, 'script');</script>		
 															
 						
-				</div>
+				</div></div>
 {% include sidebar.html %}
