layout - trying to give the form some breathing room

--- a/form.html
+++ b/form.html
@@ -5,7 +5,8 @@ title: Submit Your Code
 <div id="content" class="eleven columns">
 	<div id="post-10" class="post-10 page type-page status-publish hentry">
 		<div id="wufoo-z7x3p3">Fill out my <a href="http://mcdemo.wufoo.com/forms/z7x3p3">online form</a>.
-		</div><p>&nbsp;</p>
+		</div>	<div class="clear">&nbsp;<br></div>
+
 			<script type="text/javascript">var z7x3p3;(function(d, t) {
 				var s = d.createElement(t), options = {
 				'userName':'mcdemo', 
