layout tweak for a form page and a fix for the linked logo in the header

--- a/qform.html
+++ b/qform.html
@@ -5,7 +5,7 @@ title: Submit Your Code
 <div id="content" class="eleven columns">
 
 				<div id="post-10" class="post-10 page type-page status-publish hentry">
-<div id="wufoo-m7x3z9">
+<div class="clear">&nbsp;<br></div><div id="wufoo-m7x3z9">
 Fill out my <a href="http://mcdemo.wufoo.com/forms/m7x3z9">online form</a>.
 </div>
 <script type="text/javascript">var m7x3z9;(function(d, t) {
