--- a/native_android.html
+++ b/native_android.html
@@ -65,4 +65,5 @@ This is a sample app for the open source project at <a href="https://github.com/
 </p>
 											</div><!-- .entry-content -->
 				</div><!-- #post-## -->
+		</div>
 {% include sidebar.html %}
