--- a/native_blackberry.html
+++ b/native_blackberry.html
@@ -40,4 +40,5 @@ title: Native Blackberry
 
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
+		</div>
 {% include sidebar.html %}
