--- a/testing.html
+++ b/testing.html
@@ -24,4 +24,5 @@ title: Test Scripts
 
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
+		</div>
 {% include sidebar.html %}
