--- a/web_html.html
+++ b/web_html.html
@@ -53,4 +53,5 @@ The toolkit complies with the new Standards on Web Accessibility and Web Usabili
 
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
+		</div>
 {% include sidebar.html %}
