--- a/web_php.html
+++ b/web_php.html
@@ -37,4 +37,5 @@ A working demo of this codebase can be seen at <a href="http://usa-faq.civicagen
 </p>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
+		</div>
 {% include sidebar.html %}
