--- a/web_ruby.html
+++ b/web_ruby.html
@@ -27,4 +27,5 @@ title: Web - Ruby
 </p>
 														</div><!-- .entry-content -->
 				</div><!-- #post-## -->
+		</div>
 {% include sidebar.html %}
