Added GSA's test script and fixed a typo in DOL's

--- a/testing.html
+++ b/testing.html
@@ -15,7 +15,11 @@ title: Test Scripts
 <p>Are you looking to avoid reinventing the wheel? You can use the <a href="#testing">testing scripts</a> below to help you ensure your app is of the highest quality.</p>
 <p>&nbsp;</p>
 <h3><a name="testing"></a>Mobile Accessibility Test Script</h3>
-<p><h5>Federal API SDK</h5>A selection of test cases used to test accessibility and Section 508 compliance of mobile applications<br>
+<p><h5>Mobile Web Manual Testing Script</h5>A test script you can use as a starting point for testing your mobile web site.<br>
+<strong>Link:</strong> <a href=""></a><br>
+<strong>Source:</strong> Federal
+</p>
+<p><h5>Mobile Accessibility Test Script</h5>A selection of test cases used to test accessibility and Section 508 compliance of mobile applications<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/Mobile-Accessibility-Test-Script">https://github.com/USDepartmentofLabor/Mobile-Accessibility-Test-Script</a><br>
 <strong>Source:</strong> Federal
 </p>
