nothing to see here

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ title: Home
 			<h2>Mobile Code Catalog</h2>
 		    <p><strong>Agencies sharing code to make mobile development easier</strong><br>Mobile isn't just the future, it's the new reality! Use this catalog to either jump-start your mobile project or save time and money using open source code from the federal government, other government entities, and third party projects.</p>
 			<p>The great thing about this catalog is that it's a living resource.  You can <a href="form.html">submit your open source code</a> for inclusion (federal agencies only, please).
+			<h2>Mobile Code Catalog</h2>
+		    <p><strong>Agencies sharing code to make mobile development easier</strong><br>Mobile isn't just the future, it's the new reality! Use this catalog to either jump-start your mobile project or save time and money using open source code from the federal government, other government entities, and third party projects.</p>
+			<p>The great thing about this catalog is that it's a living resource.  You can <a href="form.html">submit your open source code</a> for inclusion (federal agencies only, please).
 		</div>
 		<div class="one_half last">
 			<img class="cluster" src="images/cluster.png" alt="">
