fixed reported bugs

--- a/native_android.html
+++ b/native_android.html
@@ -16,8 +16,8 @@ title: Native Android
 <p>Do you need more of a head start?  Try customizing one of the <a href="#complete">complete apps</a> to fit your needs.</p>
 <p>&nbsp;</p>
 <h3><a name="modular"></a>Modular Code for Android</h3>
-<p><h5>Federal API SDK</h5>Android SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the wiki. For documentation, please see the readme. For sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
-<strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/DOLDataSDK-Android">https://github.com/USDepartmentofLabor/Android_DOLDataSDK</a><br>
+<p><h5>Federal API SDK</h5>Android SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/Android_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/Android_DOLDataSDK">https://github.com/USDepartmentofLabor/Android_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
 <p><h5>Hellomap</h5>A fast way to get started with the Google Maps Android API v2.<br>
@@ -48,12 +48,12 @@ This application is under active development and will continue to be modified an
 <strong>Links:</strong>
 <ul>
 	<li><a href="https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-En">https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-En</a> (English)</li>
-	<li><a href="https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-Es">https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-Es</a> (Spanish)</li>
+	<li><a href="https://github.com/USDepartmentofLabor/OAHA-Heat-Safety-Android-Es">https://github.com/USDepartmentofLabor/OAHA-Heat-Safety-Android-Es</a> (Spanish)</li>
 </ul>
 <strong>Source:</strong> Federal
 </p>
 <p><h5>LaborStats</h5>Get the latest economic indicators from the Bureau of Labor Statistics &amp; the Employment Training Administration.<br>
-<strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/LaborStats-iOS">https://github.com/USDepartmentofLabor/LaborStats-iOS</a><br>
+<strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/LaborStats-Android">https://github.com/USDepartmentofLabor/LaborStats-Android</a><br>
 <strong>Source:</strong> Federal
 </p>
 <p><h5>SwipeListView Demo</h5>An Android List View implementation with support for drawable cells and many other swipe related features.<br>
