--- a/native_blackberry.html
+++ b/native_blackberry.html
@@ -16,7 +16,7 @@ title: Native Blackberry
 <p>Do you need more of a head start?  Try customizing one of the <a href="#complete">complete apps</a> to fit your needs or dive into some <a href="#etc">other resources</a>.</p>
 <p>&nbsp;</p>
 <h3><a name="modular"></a>Modular Code for Blackberry</h3>
-<p><h5>Federal API SDK</h5>Blackberry SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the wiki. For documentation, please see the readme. For sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><h5>Federal API SDK</h5>Blackberry SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK">https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
