--- a/native_ios.html
+++ b/native_ios.html
@@ -17,7 +17,7 @@ title: Native iOS
 
 <p>&nbsp;</p>
 <h3><a name="modular"></a>Modular Code for iOS</h3>
-<p><h5>Federal API SDK</h5>iOS SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the wiki. For documentation, please see the readme. For sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><h5>Federal API SDK</h5>iOS SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/DOLDataSDK-iOS/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/DOLDataSDK-iOS">https://github.com/USDepartmentofLabor/DOLDataSDK-iOS</a><br>
 <strong>Source:</strong> Federal
 </p>
@@ -41,7 +41,7 @@ This application is under active development and will continue to be modified an
 <strong>Link:</strong> <a href="https://github.com/whitehouse/wh-app-ios">https://github.com/whitehouse/wh-app-ios</a><br>
 <strong>Source:</strong> Federal
 </p>
-<p><h5>USA.gov</h5>The USA.gov iOS mobile application allows you to:
+<p><h5>USA.gov</h5>The USA.gov iOS mobile application allows you to:<br>
 <ul>
 <li>Search tens of millions of web pages from federal, state, local, territorial, and tribal governments and to contact your government by phone or email.</li>
 <li>Find quality images from U.S. government web sites</li>
