--- a/native_windows.html
+++ b/native_windows.html
@@ -9,7 +9,7 @@ title: Native Windows
 			<p>Are you looking to avoid reinventing the wheel? You can use the <a href="#modular">modular code</a> below to help your project along.</p>
 			<p>&nbsp;</p>
 			<h3><a name="modular"></a>Modular Code for .Net/Windows</h3>
-			<p><h5>Federal API SDK</h5>.Net SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the wiki. For documentation, please see the readme. For sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+			<p><h5>Federal API SDK</h5>.Net SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/DotNet_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 				<strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/DotNet_DOLDataSDK">https://github.com/USDepartmentofLabor/DotNet_DOLDataSDK</a><br>
 				<strong>Source:</strong> Federal
 			</p>
