--- a/testing.html
+++ b/testing.html
@@ -14,9 +14,9 @@ title: Test Scripts
 						
 <p>Are you looking to avoid reinventing the wheel? You can use the <a href="#testing">testing scripts</a> below to help you ensure your app is of the highest quality.</p>
 <p>&nbsp;</p>
-<h3><a name="testing"></a>Mobile Accessibility Test Script</h3>
+<h3><a name="testing"></a>Mobile Test Scripts</h3>
 <p><h5>Mobile Web Manual Testing Script</h5>A test script you can use as a starting point for testing your mobile web site.<br>
-<strong>Link:</strong> <a href=""></a><br>
+<strong>Link:</strong> <a href="https://github.com/GSA/Mobile-Web-Manual-Testing-Script">https://github.com/GSA/Mobile-Web-Manual-Testing-Script</a><br>
 <strong>Source:</strong> Federal
 </p>
 <p><h5>Mobile Accessibility Test Script</h5>A selection of test cases used to test accessibility and Section 508 compliance of mobile applications<br>
