--- a/web_php.html
+++ b/web_php.html
@@ -22,7 +22,7 @@ title: Web - PHP
 </p>
 
 <h3><a name="modular"></a>Modular Code for PHP</h3>
-<p><h5>Federal API SDK</h5>PHP SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the wiki. For documentation, please see the readme. For sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><h5>Federal API SDK</h5>PHP SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/PHP_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/PHP_DOLDataSDK">https://github.com/USDepartmentofLabor/PHP_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
