--- a/web_ruby.html
+++ b/web_ruby.html
@@ -20,7 +20,7 @@ title: Web - Ruby
 <strong>Link:</strong> <a href="https://github.com/GSA-OCSIT/mobile-fu">https://github.com/GSA-OCSIT/mobile-fu</a><br>
 <strong>Source:</strong> Federal
 </p>
-<p><h5>Federal API SDK</h5>Ruby SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the wiki. For documentation, please see the readme. For sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><h5>Federal API SDK</h5>Ruby SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK">https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
