changing home page image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
 			<p>The great thing about this catalog is that it's a living resource.  You can <a href="form.html">submit your open source code</a> for inclusion (federal agencies only, please).
 		</div>
 		<div class="one_half last">
-			<img class="cluster" src="images/cluster.png" alt="">
+			<img class="cluster" src="images/datasharing1.png" alt="">
 		</div>
 	</div>
 	<div class="clear">&nbsp;<br></div>
