Addressing spacing concern for USA.gov app

--- a/native_ios.html
+++ b/native_ios.html
@@ -41,8 +41,8 @@ This application is under active development and will continue to be modified an
 <strong>Link:</strong> <a href="https://github.com/whitehouse/wh-app-ios">https://github.com/whitehouse/wh-app-ios</a><br>
 <strong>Source:</strong> Federal
 </p>
-<p><h5>USA.gov</h5>The USA.gov iOS mobile application allows you to:<br>
-<ul>
+<p><h5>USA.gov</h5>The USA.gov iOS mobile application allows you to:</p>
+<p><ul>
 <li>Search tens of millions of web pages from federal, state, local, territorial, and tribal governments and to contact your government by phone or email.</li>
 <li>Find quality images from U.S. government web sites</li>
 <li>Search product recalls across several government agencies</li>
