point boilerplate to homepage not repo

--- a/web_html.html
+++ b/web_html.html
@@ -31,7 +31,7 @@ title: HTML5
 <strong>Source:</strong> Third party
 </p>
 <p><h5>HTML5 Boilerplate</h5>A front-end template for building "fast, robust, and adaptable" web apps or sites.<br>
-<strong>Link:</strong> <a href="https://github.com/h5bp/html5-boilerplate">https://github.com/h5bp/html5-boilerplate</a><br>
+<strong>Link:</strong> <a href="http://html5boilerplate.com/">http://html5boilerplate.com/</a><br>
 <strong>Source:</strong> Third party
 </p>
 
