Made ribbon clickable and fixed the Bootstrap entry.

--- a/web_html.html
+++ b/web_html.html
@@ -35,7 +35,7 @@ title: HTML5
 <strong>Source:</strong> Third party
 </p>
 
-<p><h5>Bootstrap/h5>Sleek, intuitive, and powerful front-end framework for faster and easier web development.<br>
+<p><h5>Bootstrap</h5>Sleek, intuitive, and powerful front-end framework for faster and easier web development.<br>
 <strong>Link:</strong> <a href="http://twitter.github.io/bootstrap/">http://twitter.github.io/bootstrap/</a><br>
 <strong>Source:</strong> Third party
 </p>
