Fixed Python content layout to match the rest of the site

--- a/web_python.html
+++ b/web_python.html
@@ -12,15 +12,9 @@ title: Web - Python
 				<p>&nbsp;</p>
 
 				<h3><a name="modular"></a>Modular Code for Python</h3>
-				<p></p>
-
-				<h5>Census API</h5>
-                <p>
-                    Sunlight Foundation's Python client for the <a href="http://www.census.gov/developers/">US Census Bureau API</a> makes it easy to quickly access the data you need. The ACS, SF1, and SF3 data sets are provided by the API. A Census <a href="http://www.census.gov/developers/tos/key_request.html">API key</a> is required.
+				<p><h5>Census API</h5>Sunlight Foundation's Python client for the <a href="http://www.census.gov/developers/">US Census Bureau API</a> makes it easy to quickly access the data you need. The ACS, SF1, and SF3 data sets are provided by the API. A Census <a href="http://www.census.gov/developers/tos/key_request.html">API key</a> is required.  More information can be found at <a href="https://pypi.python.org/pypi/census/0.5">https://pypi.python.org/pypi/census/0.5</a>
                     <br>
-                    <strong>Link:</strong> <a href="https://pypi.python.org/pypi/census/0.5">https://pypi.python.org/pypi/census/0.5</a>
-                    <br>
-                    <strong>Code:</strong> <a href="https://github.com/sunlightlabs/census">https://github.com/sunlightlabs/census</a>
+                    <strong>Link:</strong> <a href="https://github.com/sunlightlabs/census">https://github.com/sunlightlabs/census</a>
                     <br>
                     <strong>Source:</strong> Third party
                 </p>
