Added DSIC's Mobile App Development Program link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ title: Home
 							<h4>Other Resources</h4>
 				<p><!--Modular code and complete apps for:-->
 				<ul>
+					<li><a href="http://gsablogs.gsa.gov/dsic/get-it-done/mobile-application-development-program/">Mobile App Development Program</a></li>
 					<li><a href="testing.html">Test Scripts</a> (Including Accessibility)</li>
 					<li><a href="http://www.data.gov/developers/page/developer-resources">Federal APIs</a></li>
 					<li><a href="http://apps.usa.gov">Federal App Catalog</a></li>
