--- a/native_android.html
+++ b/native_android.html
@@ -52,6 +52,12 @@ This application is under active development and will continue to be modified an
 </ul>
 <strong>Source:</strong> Federal
 </p>
+<p><h5>BioZen</h5>BioZen is one of the first mobile applications to provide users with live biofeedback data from multiple wearable body sensors covering a range of biophysiological signals, including electroencephalogram (EEG), electromyography (EMG), galvanic skin response (GSR), electrocardiogram (ECG or EKG), respiratory rate, and temperature biofeedback data and display it on a mobile phone.
+<br>
+Using BioZen requires compatible biosensor devices. These devices and BioZen are not designed or intended for psychological therapy or medical treatments. For more information, see <a href="http://t2health.org/apps/biozen">the official site</a>.<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/BioZen-Android">https://github.com/t2health/BioZen-Android</a><br>
+<strong>Source:</strong> Federal
+</p>
 <p><h5>LaborStats</h5>Get the latest economic indicators from the Bureau of Labor Statistics &amp; the Employment Training Administration.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/LaborStats-Android">https://github.com/USDepartmentofLabor/LaborStats-Android</a><br>
 <strong>Source:</strong> Federal
